force-app/main/default/objects/Airport__c/fields/BSLS_ID__c.field-meta.xml
<CustomField>
    <fullName>BSLS_ID__c</fullName>
    <label>BSLS ID</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>