force-app/main/default/objects/Airport__c/fields/Name_Code__c.field-meta.xml
<CustomField>
    <fullName>Name_Code__c</fullName>
    <formula>Name +&apos; - &apos;+ Airport_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name-Code</label>
    <type>Text</type>
</CustomField>